# whatszara

./: .gitignore  Makefile  README.md  setup.sh
.github/workflows/: ci.yml  release.yml
desktop-app/: index.html
desktop-app/src/: main.js  styles.css
desktop-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs
desktop-app/src-tauri/src/whatszara/: actions.rs  llm.rs  mod.rs  orchestrator.rs  permissions.rs  undo.rs  whatsapp.rs
